fix: header spacing changes

--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ ul {
 
 /*------------------------------------ Header ------------------------------------- */
 header {
-    padding-top: 40px;
+    padding-top: 20px;
 }
 
 .nav-container {
